bug 143130 - ALT or F10 keys do not select menu items in MfcEmbed

If there's a native Windows menu bar, pass the keypress through to Windows.

r=aaronl@netscape.com, sr=alecf@netscape.com